--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
   <display-name>To-do list</display-name>
   <servlet>
-  	<servlet-name>REST</servlet-name>
+  	<servlet-name>To-do</servlet-name>
   	<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
   	<init-param>
   		<param-name>jersey.config.server.provider.packages</param-name>
@@ -11,8 +11,8 @@
   	<load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
- 	 <servlet-name>REST</servlet-name>
- 	 <url-pattern>/to-do/*</url-pattern>
+ 	 <servlet-name>To-do</servlet-name>
+ 	 <url-pattern>/todo/</url-pattern>
   </servlet-mapping>
   
   <welcome-file-list>
