--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -6,13 +6,13 @@
   	<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
   	<init-param>
   		<param-name>jersey.config.server.provider.packages</param-name>
-  		<param-value>org.elsys.to-doList</param-value>
+  		<param-value>org.elsys.to_doList</param-value>
   	</init-param>
   	<load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
  	 <servlet-name>To-do</servlet-name>
- 	 <url-pattern>/todo/</url-pattern>
+ 	 <url-pattern>/todo/*</url-pattern>
   </servlet-mapping>
   
   <welcome-file-list>
